--- a/tasks/restic.yml
+++ b/tasks/restic.yml
@@ -14,6 +14,7 @@
     AWS_SECRET_ACCESS_KEY: "{{ backups_b2_application_key }}"
     RESTIC_REPOSITORY: "s3:s3.{{ b2_region }}.backblazeb2.com/{{ b2_bucket_name }}"
     RESTIC_PASSWORD_FILE: "{{ restic_password_file }}"
+    RESTIC_CACHE_DIR: "{{ restic_cache_dir }}"
   no_log: "{{ restic_b2_no_log | default(true) | bool }}"
 
 - name: Create restic vars file
